--- a/msw_14/ENetClientServer.vcxproj.filters
+++ b/msw_14/ENetClientServer.vcxproj.filters
@@ -222,6 +222,12 @@
     <ClCompile Include="..\src\messages\sv_cl_messages\NetTables.pb.cc">
       <Filter>Source Files\messages\sv_cl_messages</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\messages\sv_cl_messages\Disconnect.pb.cc">
+      <Filter>Source Files\messages\sv_cl_messages</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\networking\NetworkConstants.cpp">
+      <Filter>Source Files\networking</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\messages\cl_sv_messages\ClientCmd.pb.h">
@@ -345,6 +351,9 @@
       <Filter>Header Files\messages</Filter>
     </ClInclude>
     <ClInclude Include="..\src\messages\sv_cl_messages\NetTables.pb.h">
+      <Filter>Header Files\messages\sv_cl_messages</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\messages\sv_cl_messages\Disconnect.pb.h">
       <Filter>Header Files\messages\sv_cl_messages</Filter>
     </ClInclude>
   </ItemGroup>
